added corrent meta settings

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <!-- Settings -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="title" content="vb2007.hu" />
+    <meta name="description" content="A feature-rich site with tools for your various needs!" />
+    <meta name="author" content="VB2007" />
+    <meta
+      name="keywords"
+      content="vb2007, vb2007.hu, vb2007 site, tool, tools, project, projects, shorten, shorten url, shorten link, shorten links, shorten urls, shorten url link, shorten url links, shorten link url, shorten link urls, url shortener, pastebin, paste, pastes, paste bin, paste site, paste sites, paste website, paste websites, paste text, paste texts, paste code, paste codes, upload, upload file, upload files, upload image, upload images, upload content, free upload"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" />
+    <title>vb2007.hu</title>
   </head>
   <body>
     <div id="app"></div>
