--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       content="vb2007, vb2007.hu, vb2007 site, tool, tools, project, projects, shorten, shorten url, shorten link, shorten links, shorten urls, shorten url link, shorten url links, shorten link url, shorten link urls, url shortener, pastebin, paste, pastes, paste bin, paste site, paste sites, paste website, paste websites, paste text, paste texts, paste code, paste codes, upload, upload file, upload files, upload image, upload images, upload content, free upload"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Local import -->
     <link rel="icon" href="/favicon.ico" />
+    <!-- Title -->
     <title>vb2007.hu</title>
   </head>
   <body>
