imported back previous elements, updated router links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="title" content="vb2007.hu" />
-    <meta name="description" content="A feature-rich site with tools for your various needs!" />
+    <meta name="description" content="A feature-rich site with tools for your various needs, developed with Vue.js." />
     <meta name="author" content="VB2007" />
     <meta
       name="keywords"
